# zksync-os-zisk

./: .gitignore  E2E_SETUP.md  README.md  prove_and_verify.sh
contracts/: README.md
contracts/src/: IZiskVerifier.sol  TwoProofSystemVerifier.sol  ZiskL1Verifier.sol  ZiskVerifier.sol
contracts/test/: TwoProofSystemVerifierTest.t.sol  ZiskVerifierTest.t.sol
guest/: Cargo.toml
guest/getrandom-stub/: Cargo.toml
guest/getrandom-stub-03/: Cargo.toml
guest/getrandom-stub-03/src/: lib.rs
guest/getrandom-stub/src/: lib.rs
guest/src/: main.rs
guest/tiny-keccak-patch/src/: keccakf.rs
host/: Cargo.toml
host/src/: main.rs
lib/: Cargo.toml
lib/src/: block_header.rs  commitment.rs  executor.rs  hash.rs  lib.rs  merkle.rs  test_proven.rs  types.rs
lib/src/crypto/: ffi.rs  impls.rs  mod.rs
lib/src/executor/: evm.rs  mod.rs  proven_db.rs  tx.rs  verify.rs
