[package]
name = "zksync-os-zisk-guest"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
zksync-os-zisk-lib = { path = "../lib", default-features = false }
revm = { version = "=34.0.0", default-features = false, features = ["std"] }
bincode = "1.3"
alloy-primitives = { version = "1", default-features = false, features = ["native-keccak"] }
ziskos = { git = "https://github.com/0xPolygonHermez/zisk.git", tag = "v0.16.1" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# Both getrandom 0.2 and 0.3 fail on ZiSK target.
# Cargo resolves patches by matching the version in the stub's Cargo.toml.
# We provide TWO stubs but Cargo only allows one [patch] per name.
# Solution: stub v0.2 here, and also add getrandom 0.3 as direct dep with our stub.
[patch.crates-io]
getrandom = { path = "getrandom-stub" }
# Route all keccak-f permutations through ZiSK hardware-accelerated syscall.
# Every crate using tiny-keccak (revm, alloy, zksync-os-revm) gets this for free.
tiny-keccak = { path = "tiny-keccak-patch" }
