[package]
name = "zksync-os-zisk-host"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
zksync-os-zisk-lib = { path = "../lib" }
revm = { version = "=34.0.0", features = ["optional_balance_check", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
alloy-primitives = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"

[patch."https://github.com/vladbochok/zksync-os-revm"]
zksync-os-revm = { path = "/tmp/zksync-os-revm-patched" }
